# G_eNgine

./: .gitmodules  CMakeLists.txt  GameEngineGlobals.cpp  GameEngineGlobals.h  README.md  glconfig.h  main.cpp
events/: EventGlobals.cpp  EventGlobals.h  EventHandler.h  EventManager.cpp  EventManager.h  EventQueue.h  EventType.h
events/SDLEvents/: SDLEvents.cpp  SDLEvents.h
graphics/nGLHandler/: nGLHandler.cpp  nGLHandler.h
